# CNN-Forward-Pass-Using-Blood-Mnist

./: ActivationFunction.cpp  ActivationFunction.h  BloodMNISTLoader.cpp  BloodMNISTLoader.h  CMakeLists.txt  ConvolutionKernel.cpp  ConvolutionKernel.h  ConvolutionLayer.cpp  ConvolutionLayer.h  ConvolutionalNeuralNetwork.cpp  ConvolutionalNeuralNetwork.h  Enums.cpp  Enums.h  Image.cpp  Image.h  PoolingLayer.cpp  PoolingLayer.h  README.md  main.cpp
